# SPIX

./: .gitignore  README.md  Stereo_seq_MOSTA_bin3_multiscale.ipynb  Vesalius_Python.py  VisiumHD_2um_CRC_multiscale_workflow.ipynb  VisiumHD_2um_make_zarr.ipynb  pyproject.toml
SPIX/: README.md  Stereopy_make_bin3_h5ad.ipynb  VisiumHD_2um_make_zarr.ipynb  __init__.py  pyproject.toml
SPIX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SPIX/SPIX_module/: embeddings.py  enrichment_analysis.py  equalization.py  parameter_selection.py  plotting.py  segmentation.py  smoothing.py  tiles.py  utils.py
SPIX/SPIX_module.egg-info/: PKG-INFO
SPIX/analysis/: __init__.py  celltype_enrichment.py  enrichment_analysis.py  geary_supplementary_figure.py  gene_expression_embedding.py  gene_expression_gallery.py  moran_geary_comparison.py  multiscale_moran_ranks.py  perform_pseudo_bulk_analysis.py  segment_svg_enrichment.py  svg_gain_explanation.py  svg_specificity.py
SPIX/image_processing/: __init__.py  equalization.py  image_cache.py  smoothing.py
SPIX/optimization/: parameter_selection.py
SPIX/spix/: hot_spot_utils.py  spix.py  spix_utils.py
SPIX/superpixel/: __init__.py  compactness_mode.py  hotspots.py  image_plot_slic_segmentation.py  leiden_slic_segmentation.py  segmentation.py  slic_segmentation.py
SPIX/tiles_embeddings/: embeddings.py  tiles.py
SPIX/utils/: sanity_checks.py  utils.py
SPIX/vesalius_core/: image_embeds.py  image_processing.py  segments.py
SPIX/visualization/: __init__.py  plotting.py  (+2 more)
benchmarks/: visiumhd_segment_benchmark.py
(+31 files in other folders)
