[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SPIX"
version = "0.1.1"
description = "A Python package using Super Pixels for efficient multi-scale Spatial omics analysis"
authors = [
    { name = "Hwisoo Choi", email = "chs1181@gmail.com" },
    { name = "Patrick CN Martin", email = "patrick.martin@cshs.org"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "scanpy",
    "squidpy",
    "requests",
    "seaborn",
    "scikit-image",
    "anndata",
    "joblib",
    "tqdm_joblib",
    "opencv-python",
    "NaiveDE",
    "minisom",
    "networkx",
    "shapely",
    "tqdm",
    "alphashape",
    "igraph",
    "harmonypy"
]

[project.optional-dependencies]
gpu = ["rapids-singlecell"]

[tool.setuptools]
packages = { find = { where = ["."] } }


[tool.black]
line-length = 88
target-version = ['py38']


